force-app/main/default/objects/Opportunity/fields/Internal_Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Internal_Credit_Rating__c</fullName>
    <formula>CASE(Account.Internal_Credit_Rating__c,  &quot;1&quot; ,1, &quot;2&quot;,2,&quot;3&quot;,3,&quot;4&quot;,4,&quot;5&quot;,5,&quot;6&quot;,6,&quot;7&quot;,7,&quot;8&quot;,8,&quot;9&quot;,9,&quot;10&quot;,10,&quot;11&quot;,11,&quot;12&quot;,12,&quot;13&quot;,13,&quot;14&quot;,14,&quot;15&quot;,15,&quot;16&quot;,16,&quot;17&quot;,17,&quot;18&quot;,18,&quot;19&quot;,19,&quot;20&quot;,20,&quot;21&quot;,21,&quot;22&quot;,22,&quot;23&quot;,23,99)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Credit Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>