force-app/main/default/objects/Opportunity/fields/Is_Opportunity_part_of_Client_Budget__c.field-meta.xml
<CustomField>
    <fullName>Is_Opportunity_part_of_Client_Budget__c</fullName>
    <description>Indicates whether the opportunity is part of the budget for the Client in order to track opportunities against budget</description>
    <inlineHelpText>Shows whether the opportunity forms part of the agreed client budget for the year. This can be for either individually or portfolio budgeted clients and is to show the difference between known opportunities and newly identified opportunities.</inlineHelpText>
    <label>Is Opportunity part of Client Budget?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>