force-app/main/default/objects/Opportunity/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>As a sales person I want to be able to select a Source for the opportunity in order for me to estimate the probability of deal closure and report on Opportunity Sources</description>
    <inlineHelpText>The primary source where this opportunity originated from as a lead</inlineHelpText>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Engagement</fullName>
            </value>
            <value>
                <fullName>Client Plan</fullName>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
                <default>true</default>
                <label>Cross Sell</label>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Lead Analytics Tool</fullName>
            </value>
            <value>
                <fullName>Request for Proposal</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Game Changer</fullName>
            </value>
            <value>
                <fullName>Ecosystem Manager</fullName>
            </value>
            <value>
                <fullName>Akili Insight</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Africa-China</fullName>
            </value>
            <value>
                <fullName>Campaign Lead</fullName>
            </value>
            <value>
                <fullName>CCC Lead</fullName>
            </value>
            <value>
                <fullName>CIB</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Ecosystem</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Inbound call</fullName>
            </value>
            <value>
                <fullName>Internal Referral (HQ or Branch)</fullName>
            </value>
            <value>
                <fullName>Outbound call</fullName>
            </value>
            <value>
                <fullName>Personal Banking</fullName>
            </value>
            <value>
                <fullName>Seminar - Internal</fullName>
            </value>
            <value>
                <fullName>Seminar - Partner</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Walk-in Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>