force-app/main/default/objects/Opportunity/fields/Mandated__c.field-meta.xml
<CustomField>
    <fullName>Mandated__c</fullName>
    <label>Mandated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not mandated</fullName>
            </value>
            <value>
                <fullName>Mandated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>