force-app/main/default/objects/Opportunity/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <description>SFP-9031: Milestone field that displays the next Action Plan tasks subject line based on the earliest due date and where the status does not equal Completed or Cancelled</description>
    <label>Milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>