force-app/main/default/objects/Opportunity/fields/NBAC_Committee__c.field-meta.xml
<CustomField>
    <fullName>NBAC_Committee__c</fullName>
    <description>The NBAC committee who is responsible for the approval of NBAC Applications. [SFP-6735]</description>
    <inlineHelpText>The NBAC committee who is responsible for the approval of NBAC Applications.</inlineHelpText>
    <label>NBAC Committee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>