force-app/main/default/objects/Opportunity/fields/NDA__c.field-meta.xml
<CustomField>
    <fullName>NDA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFP-123</description>
    <inlineHelpText>Select if an NDA has been signed.</inlineHelpText>
    <label>NDA</label>
    <type>Checkbox</type>
</CustomField>