force-app/main/default/objects/Opportunity/fields/No_of_Products__c.field-meta.xml
<CustomField>
    <fullName>No_of_Products__c</fullName>
    <description>Number of Products associated with this Opportunity. Used in validation rule to make sure currency is not changed on Opportunity if Products are present</description>
    <inlineHelpText>Number of Products associated with this Opportunity</inlineHelpText>
    <label>No of Products</label>
    <summaryForeignKey>SB_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>