force-app/main/default/objects/Opportunity/fields/Number_of_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Open__c</fullName>
    <formula>IF(
     ISNULL( Start_Date__c), 
     0,  
     IF(
          IsClosed, 
          FLOOR( Actual_Close_Date__c  -  Start_Date__c),
          FLOOR(TODAY() - Start_Date__c)
        )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days since the start date of the Opportunity.</inlineHelpText>
    <label>Number of Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>