force-app/main/default/objects/Opportunity/fields/Number_of_Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_to_Close__c</fullName>
    <description>Count number of days for the opportunity to close.</description>
    <formula>IF(IsClosed, FLOOR( Actual_Close_Date__c - DATEVALUE( CreatedDate )), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count number of days for the opportunity to close.</inlineHelpText>
    <label>Number of Days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>