force-app/main/default/objects/Opportunity/fields/Number_of_Facilities_attached__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Facilities_attached__c</fullName>
    <label>Number of Facilities attached</label>
    <summaryForeignKey>Facilities__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>