force-app/main/default/objects/Opportunity/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <displayFormat>Oppt-{000000}</displayFormat>
    <inlineHelpText>Unique ID number automatically generated. It used for downstream systems and business processes.</inlineHelpText>
    <label>Opportunity ID</label>
    <type>AutoNumber</type>
</CustomField>