force-app/main/default/objects/Opportunity/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>Used to display Opportunity Owner as user should not see Change Owner Link.</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;Owner.Id,Owner.FirstName + &apos; &apos; + Owner.LastName,&quot;_blank&quot;)</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>