force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Division__c</fullName>
    <description>SHAVEEN12APR2011CASE074 &gt; Used to store the original Opportunity Owner User details once the Opportunity is Closed. EN - 1168: Renamed label name alone but not the API and updated helptext.</description>
    <inlineHelpText>Copy of the corresponding Opportunity Owner&apos;s User object fields in the following scenarios: 
1. Automatically updated and checks for updates when the opportunity is open. 
2. Updated when the opportunity is closed and updates only if Owner changes.</inlineHelpText>
    <label>Opportunity Owner User Division</label>
    <length>100</length>
    <type>Text</type>
</CustomField>