force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Field is used to capture the Opportunity Owner as a Lookup so that a formula field can draw the location value from it.</description>
    <inlineHelpText>This field is not meant to be on the page Layout. It is an intermediate field.</inlineHelpText>
    <label>Opportunity Owner Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>