force-app/main/default/objects/Opportunity/fields/Opportunity_Progress__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Progress__c</fullName>
    <description>This field described the status of the opportunity based on the Progress Bar</description>
    <formula>IF(ISPICKVAL(StageName, &quot;2 - Develop&quot;) &amp;&amp; (Amount=0 || No_of_Products__c=0),
IMAGE(&quot;resource/ColorDots/AMBER.jpg&quot;,&quot;&quot;,25,150),


IF( (CloseDate &lt; TODAY()) &amp;&amp; (ISPICKVAL(StageName, &quot;1 - Lead&quot;)|| ISPICKVAL(StageName, &quot;2 - Develop&quot;)), 
IMAGE(&quot;resource/ColorDots/RED.jpg&quot;,&quot;&quot;,24,160),

IMAGE(&quot;resource/ColorDots/GREEN.jpg&quot;,&quot;&quot;,25,75)

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Progress</label>
    <type>Text</type>
</CustomField>