force-app/main/default/objects/Opportunity/fields/Opportunity_Sector__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sector__c</fullName>
    <inlineHelpText>The Sector that the Opportunity will be funding/supporting. This could be different to the Client Sector.</inlineHelpText>
    <label>Opportunity Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Industrials</fullName>
            </value>
            <value>
                <fullName>Internal / Grouped</fullName>
            </value>
            <value>
                <fullName>Mining &amp; Metals</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Power and Infrastructure</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Sovereign / Public Sector</fullName>
            </value>
            <value>
                <fullName>Telecoms &amp; Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>