force-app/main/default/objects/Opportunity/fields/OpptCurrencyForProducts__c.field-meta.xml
<CustomField>
    <fullName>OpptCurrencyForProducts__c</fullName>
    <formula>CASE(CurrencyIsoCode,
&quot;USD&quot;,&quot;USD&quot;,
&quot;ZAR&quot;,&quot;ZAR&quot;,
&quot;Another Currency&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpptCurrencyForProducts</label>
    <type>Text</type>
</CustomField>