force-app/main/default/objects/Opportunity/fields/OverrideOnClose__c.field-meta.xml
<CustomField>
    <fullName>OverrideOnClose__c</fullName>
    <defaultValue>false</defaultValue>
    <description>General purpose flag that can be used in code/flows to bypass a validation rule.
            C-00002944 - Implemented for this case to bypass the AdvisoryEditProbabilityDenied validation rule.</description>
    <label>OverrideOnClose</label>
    <type>Checkbox</type>
</CustomField>