force-app/main/default/objects/Opportunity/fields/Owner_CIB_Global_Area__c.field-meta.xml
<CustomField>
    <fullName>Owner_CIB_Global_Area__c</fullName>
    <description>EH-0947 CommB: CST - dependency between Opp team role and user global area</description>
    <formula>TEXT(Owner.User_CIB_Global_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner CIB Global Area</label>
    <type>Text</type>
</CustomField>