force-app/main/default/objects/Opportunity/fields/Price_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Price_Sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Restrict visibility of the Opportunity</inlineHelpText>
    <label>MNPI</label>
    <type>Checkbox</type>
</CustomField>