force-app/main/default/objects/Opportunity/fields/Primary_Event_Report_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Event_Report_Source__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Event Report where this Opportunity was identified/originated</description>
    <inlineHelpText>The Event Report where this Opportunity was identified/originated</inlineHelpText>
    <label>Primary Event Report Source</label>
    <referenceTo>Call_Report__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>