force-app/main/default/objects/Opportunity/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Shows the importance of the deal - not the probability of winning</description>
    <inlineHelpText>High: Significant Deal for CIB. Requires CIB Exco/Division Head/Sector Head Involvement.

Medium: Significant Deal/Revenue for a Division/Portfolio/Sector. Requires Director/BU Involvement.

Low: Routine Transaction, Requires Minimal Intervention.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>