force-app/main/default/objects/Opportunity/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>SFP-9327 [f] - A formula field to display the Product Group associated with the selected Product</description>
    <formula>TEXT(Product__r.Product_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>