force-app/main/default/objects/Opportunity/fields/Proposed_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Deposit__c</fullName>
    <description>SFP-9325 [c] Deposit the client has to pay</description>
    <label>Proposed Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>