force-app/main/default/objects/Opportunity/fields/Proposed_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Interest_Rate__c</fullName>
    <description>SFP-9325 [c] Interest rate the client will be offered</description>
    <label>Proposed Interest Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>