force-app/main/default/objects/Opportunity/fields/Reason_Won_Lost_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reason_Won_Lost_Comments__c</fullName>
    <inlineHelpText>A brief description of why the Opportunity was won / lost (255 characters or less)</inlineHelpText>
    <label>Reason Won / Lost Comments</label>
    <type>TextArea</type>
</CustomField>