force-app/main/default/objects/Opportunity/fields/Reason_Won_Lost_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reason_Won_Lost_Detail__c</fullName>
    <description>Related detail for winning / losing the Opportunity</description>
    <inlineHelpText>Related detail for winning / losing this Opportunity</inlineHelpText>
    <label>Reason Won / Lost Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ReasonForWinLossPickList__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Appetite for Client / Sector</fullName>
            </value>
            <value>
                <fullName>Client / Transaction Risk</fullName>
            </value>
            <value>
                <fullName>Client Governance / Regulatory Restrictions</fullName>
            </value>
            <value>
                <fullName>Client not Aligned with SB Geographic Footprint</fullName>
            </value>
            <value>
                <fullName>Delays in Credit Approval</fullName>
            </value>
            <value>
                <fullName>Delays in Implementation Phase</fullName>
            </value>
            <value>
                <fullName>Efficiencies in Banking Platforms, Systems and Channels</fullName>
            </value>
            <value>
                <fullName>Favourable Client Onboarding (KYC) Turnaround</fullName>
            </value>
            <value>
                <fullName>Individual Excellence and Service</fullName>
            </value>
            <value>
                <fullName>Inefficiencies in Banking Platforms, Systems and Channels</fullName>
            </value>
            <value>
                <fullName>Inefficient Interaction and Service from Key Business Rep</fullName>
            </value>
            <value>
                <fullName>Inefficient Interaction and Service from  Opportunity Team</fullName>
            </value>
            <value>
                <fullName>Insufficient Security</fullName>
            </value>
            <value>
                <fullName>Key Relationship Bank</fullName>
            </value>
            <value>
                <fullName>Not Clients Primary Relationship Bank</fullName>
            </value>
            <value>
                <fullName>Opportunity Team Excellence and Service</fullName>
            </value>
            <value>
                <fullName>Poor Response from Opportunity Team</fullName>
            </value>
            <value>
                <fullName>Prompt Credit Approval Process</fullName>
            </value>
            <value>
                <fullName>SB Geographic Footprint</fullName>
            </value>
            <value>
                <fullName>Seamless Implementation</fullName>
            </value>
            <value>
                <fullName>Swift Response from Opportunity Team</fullName>
            </value>
            <value>
                <fullName>Unfavourable Client Onboarding (KYC) Turnaround</fullName>
            </value>
            <value>
                <fullName>Mandate terminated/expired</fullName>
            </value>
            <value>
                <fullName>Process abandoned</fullName>
            </value>
            <value>
                <fullName>Offer received too low</fullName>
            </value>
            <value>
                <fullName>Client bid too low</fullName>
            </value>
            <value>
                <fullName>Pricing too high</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>