force-app/main/default/objects/Opportunity/fields/ReasonForWinLossPickList__c.field-meta.xml
<CustomField>
    <fullName>ReasonForWinLossPickList__c</fullName>
    <description>Reason for winning / losing the Opportunity</description>
    <inlineHelpText>Reason for winning / losing this Opportunity</inlineHelpText>
    <label>Reason Won / Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bank Strategy not Aligned to Client Strategy</fullName>
            </value>
            <value>
                <fullName>Client Irrelevance / Unfavourable Relationship</fullName>
            </value>
            <value>
                <fullName>Client Relevance / Relationship</fullName>
            </value>
            <value>
                <fullName>Compliance Risk</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Favourable Response Time</fullName>
            </value>
            <value>
                <fullName>Fewer Products Available and Poor Product Fit</fullName>
            </value>
            <value>
                <fullName>Greater Product Mix and Exact Product Fit</fullName>
            </value>
            <value>
                <fullName>Most Competitive Market Pricing</fullName>
            </value>
            <value>
                <fullName>Unfavourable Market Pricing</fullName>
            </value>
            <value>
                <fullName>Unfavourable Response Time</fullName>
            </value>
            <value>
                <fullName>Unfavourable Returns from Pricing Structure</fullName>
            </value>
            <value>
                <fullName>Captured in Error / Duplicate / Expired</fullName>
            </value>
            <value>
                <fullName>Client Strategy Change</fullName>
            </value>
            <value>
                <fullName>Unfavorable Returns from Pricing Structure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>