force-app/main/default/objects/Opportunity/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <formula>Account.Relationship_Manager_Lookup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Manager</label>
    <type>Text</type>
</CustomField>