force-app/main/default/objects/Opportunity/fields/Relevant_Committee__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Committee__c</fullName>
    <description>Case#2642#1345 &amp; #3508 PCC - Rudolf Niehaus
Committee’s that all Opportunities need to be submitted to</description>
    <inlineHelpText>Select the Relevant Committee that the Opportunity will be Submitted to</inlineHelpText>
    <label>Relevant Committee</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Mandates</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Reputational Risk Committee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>