force-app/main/default/objects/Opportunity/fields/Reporting_Priority__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EN-0855. New field created to track priority opportunities in order to reflect them in monthly Manco reports</description>
    <inlineHelpText>Select this opportunity if it should appear on global management reporting</inlineHelpText>
    <label>Reporting Priority</label>
    <type>Checkbox</type>
</CustomField>